--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="css/defalt.css">
+<link rel="stylesheet" type="text/css" href="css/default.css">
 <title>夏休み</title>
 </head>
 <body>
