--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
 <title>夏休み</title>
 </head>
 <body>
-<header>
-<p>ヘッダー</p>
-</header>
 
-<article id="main1">
-<h1>本文</h>
+
+<article class="box">
+<h1>本文1</h>
 <p>本文</p>
 </article>
 
-<article id="main2">
-<h1>本文</h>
+<article class="box">
+<h1>本文2</h>
 <p>本文</p>
 </article>
 
